// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonToggle control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <Button
    bgColorOff="inherit"
    bgColorOn="inherit"
    className="ui-button-toggle test-class"
    contentEditable={false}
    direction="right"
    disabled={false}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height=""
    iconName="bomb"
    iconNameOff="bomb"
    iconNameOn="bomb"
    iconStyle=""
    id=""
    initialToggle={false}
    location="none"
    noedit={false}
    nohover={false}
    noripple={true}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "gray",
      }
    }
    testing={true}
    theme={Object {}}
    tooltip=""
    visible={true}
    width=""
    xcss={null}
  />
</ThemeProvider>
`;

exports[`Test creation of a ButtonToggle control with on/off icons 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="star-o"
  iconNameOn="star"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <Button
      bgColorOff="inherit"
      bgColorOn="inherit"
      className="ui-button-toggle"
      contentEditable={false}
      direction="right"
      disabled={false}
      fgColorOff="gray"
      fgColorOn="black"
      focus={false}
      height=""
      iconName="star-o"
      iconNameOff="star-o"
      iconNameOn="star"
      iconStyle=""
      id=""
      initialToggle={false}
      location="none"
      noedit={false}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "gray",
        }
      }
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "headerHoverColor": "#ffe11a",
            "hoverColor": "#c0c0c0",
            "inputBorderColor": "#c0c0c0",
            "transitionDelay": "0.5s",
          }
        }
      >
        <styled.div
          className="ui-button nohover ui-button-toggle"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "gray",
            }
          }
          visible={true}
        >
          <div
            className="ui-button nohover ui-button-toggle sc-htpNat eaVJAo"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "gray",
              }
            }
          >
            <Icon
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="star-o"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.i
                  className="ui-icon fa fa-fw fa-star-o"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="star-o"
                  id=""
                  imageFile=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  tooltip=""
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <i
                    className="ui-icon fa fa-fw fa-star-o sc-bdVaJa rkmGs"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    height=""
                    id=""
                    selected={false}
                    style={Object {}}
                    width=""
                  />
                </styled.i>
              </ThemeProvider>
            </Icon>
          </div>
        </styled.div>
      </ThemeProvider>
    </Button>
  </ThemeProvider>
</ButtonToggle>
`;

exports[`Test disabling of a ButtonToggle 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <Button
      bgColorOff="inherit"
      bgColorOn="inherit"
      className="ui-button-toggle"
      contentEditable={false}
      direction="right"
      disabled={true}
      fgColorOff="gray"
      fgColorOn="black"
      focus={false}
      height=""
      iconName="bomb"
      iconNameOff="bomb"
      iconNameOn="bomb"
      iconStyle=""
      id=""
      initialToggle={false}
      location="none"
      noedit={false}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "gray",
        }
      }
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "headerHoverColor": "#ffe11a",
            "hoverColor": "#c0c0c0",
            "inputBorderColor": "#c0c0c0",
            "transitionDelay": "0.5s",
          }
        }
      >
        <styled.div
          className="ui-button nohover ui-button-toggle"
          disabled={true}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "gray",
            }
          }
          visible={true}
        >
          <div
            className="ui-button nohover ui-button-toggle sc-htpNat cDPcSb"
            disabled={true}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "gray",
              }
            }
          >
            <Icon
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.i
                  className="ui-icon fa fa-fw fa-bomb"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="bomb"
                  id=""
                  imageFile=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  tooltip=""
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <i
                    className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    height=""
                    id=""
                    selected={false}
                    style={Object {}}
                    width=""
                  />
                </styled.i>
              </ThemeProvider>
            </Icon>
          </div>
        </styled.div>
      </ThemeProvider>
    </Button>
  </ThemeProvider>
</ButtonToggle>
`;

exports[`Test making a ButtonToggle invisible 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <Button
      bgColorOff="inherit"
      bgColorOn="inherit"
      className="ui-button-toggle"
      contentEditable={false}
      direction="right"
      disabled={false}
      fgColorOff="gray"
      fgColorOn="black"
      focus={false}
      height=""
      iconName="bomb"
      iconNameOff="bomb"
      iconNameOn="bomb"
      iconStyle=""
      id=""
      initialToggle={false}
      location="none"
      noedit={false}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "gray",
        }
      }
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={false}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "headerHoverColor": "#ffe11a",
            "hoverColor": "#c0c0c0",
            "inputBorderColor": "#c0c0c0",
            "transitionDelay": "0.5s",
          }
        }
      >
        <styled.div
          className="ui-button nohover ui-button-toggle"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "gray",
            }
          }
          visible={false}
        >
          <div
            className="ui-button nohover ui-button-toggle sc-htpNat obZDX"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "gray",
              }
            }
          >
            <Icon
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.i
                  className="ui-icon fa fa-fw fa-bomb"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="bomb"
                  id=""
                  imageFile=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  tooltip=""
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <i
                    className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    height=""
                    id=""
                    selected={false}
                    style={Object {}}
                    width=""
                  />
                </styled.i>
              </ThemeProvider>
            </Icon>
          </div>
        </styled.div>
      </ThemeProvider>
    </Button>
  </ThemeProvider>
</ButtonToggle>
`;

exports[`Test retrieval of ButtonToggle props object 1`] = `
Object {
  "bgColorOff": "inherit",
  "bgColorOn": "inherit",
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "fgColorOff": "gray",
  "fgColorOn": "black",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconNameOff": "bomb",
  "iconNameOn": "bomb",
  "iconStyle": "",
  "id": "",
  "initialToggle": false,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {},
  "tooltip": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
